styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "ArialRounded", -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol";
}
body{
  background-color: #ba4949;
}
main {
  background-color: #ba4949;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  flex-direction: column;
  padding: 10px 10px;
  color: white;
  position: relative;
}

main button:active{
  transform: scale(0.9);
}

.options {
  display: flex;
  flex-direction: row;
  gap: 10px;
}

.pomodoro-color {
  background-color: #ba4949;
  transition: all 0.5s ease-in;
}

.short-color {
  background-color: #38858a;
  transition: all 0.5s ease-in;
}

.long-color {
  background-color: #397097;
  transition: all 0.5s ease-in;
}

.navbar {
  display: flex;
  flex-direction: row;
  gap: 150px;
  align-items: center;
  border-bottom: solid #3f3f3f 1px;
  padding: 10px;
}

.navbar-buttons {
  background-color: #c15c5c;
  height: 30px;
  width: 80px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  color: white;
}
.navbar-buttons i {
  background-color: #c15c5c;
}
.heading {
  display: flex;
  flex-direction: row;
  border-bottom: solid #3f3f3f 1px;
  gap: 150px;
}
.heading p {
  text-align: center;
}
.heading button {
  margin-right: 0px;
}
.set-time {
  display: flex;
  flex-direction: column;
  gap: 10px;
  color: #626262;
}
.okay {
  background-color: #cccccc;
  color: #3f3434;
  width: 60px;
  height: 30px;
  border-radius: 5px;
  margin-left: 250px;
  margin-top: 40px;
  border: none;
}
.setting-buttons {
  display: flex;
  flex-direction: row;
  gap: 30px;
}
.setting-time {
  height: 30px;
  width: 90px;
  border: none;
  background-color: #efefef;
  border-radius: 5px;
  margin-top: 5px;
}
.setting-popup {
  background: rgba(0, 0, 0, 0.6);
  width: 100%;
  height: 100%;
  position: absolute;
  color: black;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}
.setting-popup-content {
  display: flex;
  gap: 5px;
  flex-direction: column;
  align-items: center;
  height: 250px;
  width: 400px;
  background: white;
  color: black;
  padding: 20px;
  position: relative;
  border-radius: 5px;
}
.close-button {
  position: absolute;
  right: 15px;
  background-color: white;
  border: none;
}

.sign-in-popup {
  background: #ba4949;
  width: 100%;
  height: 100%;
  position: absolute;
  color: black;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}
.sign-in-popup-content {
  display: flex;
  gap: 5px;
  flex-direction: column;
  align-items: center;
  height: 300px;
  width: 350px;
  background: white;
  color: black;
  padding: 20px;
  position: relative;
  border-radius: 5px;
}
.sign-in-popup-content img {
  width: 50px;
  height: 50px;
  border-radius: 50px;
}
.sign-in-popup-content h1 {
  color: black;
}
.sign-in-popup-content label {
  color: black;
}
.sign-in-button {
  width: 70px;
  height: 30px;
  position: center;
  background-color: #c15c5c;
  border: none;
  border-radius: 5px;
  display: block;
  align-items: center;
  margin: 15px auto 0;
}

form {
  display: flex;
  flex-direction: column;
  gap: 10px;
}
.more-button {
  height: 30px;
  width: 30px;
  border: none;
  background-color: #c15c5c;
  border-radius: 5px;
  cursor: pointer;
}

.dropdown1 {
  display: flex;
  flex-direction: column;
  position: relative;
}

.dropdown2 {
  display: flex;
  flex-direction: column;
  position: relative;
}

.dropdown-content {
  display: flex;
  flex-direction: column;
  background-color: white;
  color: black;
  gap: 10px;
  width: 150px;
  height: 130px;
  border-radius: 3px;
  position: absolute;
  right: 0px;
  margin-top: 35px;
}

.dropdown-content2 {
  display: flex;
  flex-direction: column;
  background-color: white;
  color: black;
  gap: 10px;
  width: 200px;
  height: 165px;
  border-radius: 3px;
  position: absolute;
  right: 0px;
  margin-top: 35px;
}

.dropdown-content a {
  margin-left: 10px;
  margin-top: 10px;
}

.dropdown-content2 a {
  margin-left: 10px;
  margin-top: 10px;
}

.inputs {
  width: 300px;
  height: 35px;
  background-color: #efefef;
  border: none;
  border-radius: 5px;
}
.more-button i {
  background-color: #c15c5c;
  color: white;
}

.menu {
  background-color: white;
  width: 100%;
  display: none;
}

.navbar h1 {
  font-size: 18px;
}
.clock-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #c15c5c;
  gap: 10px;
  width: 450px;
  height: 280px;
  border-radius: 5px;
  margin-top: 50px;
  color: azure;
}

.pomodoro-btn {
  height: 30px;
  width: 90px;
  border-radius: 5px;
  border: none;
  background-color: #c15c5c;
  font-size: 15px;
  cursor: pointer;
  color: white;
}

.short-break-btn {
  height: 30px;
  width: 90px;
  border-radius: 5px;
  border: none;
  background-color: #c15c5c;
  font-size: 15px;
  cursor: pointer;
  color: white;
}

.long-break-btn {
  height: 30px;
  width: 90px;
  border-radius: 5px;
  border: none;
  background-color: #c15c5c;
  font-size: 15px;
  cursor: pointer;
  color: white;
}

.modes {
  display: flex;
  flex-direction: row;
  gap: 10px;
  border: none;
  background-color: #c15c5c;
  transition: all 0.5s ease-in;
}

.timer {
  display: flex;
  flex-direction: row;
  background-color: #c15c5c;
  font-size: 100px;
  font-weight: 600;
}
.timer-background {
  background-color: #c15c5c;
}
.start {
  background-color: #c15c5c;
}

.start button {
  height: 50px;
  width: 150px;
  background-color: beige;
  color: #c15c5c;
  font-size: 20px;
  border-radius: 5px;
  border: none;
  box-shadow: 0px 7px 2px -2px #cccccc;
  cursor: pointer;
}
.hide {
  display: none;
}
.show {
  display: block;
}

.notice {
  display: flex;
  flex-direction: column;
  text-align: center;
  padding: 20px;
  gap: 10px;
}
.task-info {
  display: flex;
  flex-direction: row;
  gap: 350px;
  border-bottom: solid #d3d3d3 2px;
  padding: 5px;
  justify-content: center;
}
.task-info button {
  height: 30px;
  width: 30px;
  border: none;
  background-color: #c15c5c;
  border-radius: 5px;
  cursor: pointer;
  color: white;
}
.task-info i {
  background-color: #c15c5c;
}
.add-task button {
  background-color: #aa4242;
  color: #e2bcbc;
  border: dashed 2px;
  border-radius: 10px;
  border-color: #af9595;
  margin-top: 40px;
  width: 400px;
  height: 60px;
  font-size: 18px;
  cursor: pointer;
}
.add-task-popup {
  background-color: white;
  color: black;
  display: flex;
  flex-direction: column;
  gap: 10px;
  border-radius: 5px;
  height: 200px;
  width: 400px;
  margin-top: 30px;
}
.another-hide {
  display: none;
}
.add-task-popup-content {
  margin-left: 25px;
}
.add-task-input {
  width: 100%;
  height: 50px;
  border-radius: 3px;
  margin-top: 30px;
  font-size: large;
  border: none;
}
.add-notes-projects {
  font-size: 15px;
  margin-top: 20px;
}
.add-task-number-input {
  background-color: #cccccc;
  width: 80px;
  height: 40px;
  border: none;
  border-radius: 5px;
}
.btss {
  width: 40px;
  height: 40px;
  border: none;
  border-radius: 5px;
}
.cancel-save {
  width: 100%;
  height: 60px;
  background-color: #cccccc;
  justify-content: center;
}
.cancel {
  background-color: #cccccc;
  width: 60px;
  height: 40px;
  border: none;
  border-radius: 5px;
  margin-left: 250px;
  margin-top: 10px;
}
.save {
  background-color: #222020;
  width: 60px;
  height: 40px;
  border: none;
  border-radius: 5px;
  margin-left: 15px;
  margin-top: 10px;
}

.pomodoro-container {
  background-color: #c15c5c;
  transition: all 0.5s ease-in;
}

.short-container {
  background-color: #4c9196;
  transition: all 0.5s ease-in;
}

.long-container {
  background-color: #4d7fa2;
  transition: all 0.5s ease-in;
}

.btn-focus {
  background-color: #a44e4e;
  transition: all 0.5s ease-in;
}

.pomodoro-other-color {
  background-color: #c15c5c;
  transition: all 0.5s ease-in;
}

.pomodoro-focus {
  background-color: #a44e4e;
  transition: all 0.5s ease-in;
}

.short-break-btn-focus {
  background-color: rgb(1, 27, 19);
  transition: all 0.5s ease-in;
}
.short-break-btn-focus {
  background-color: #417b80;
  transition: all 0.5s ease-in;
}

.long-break-btn-focus {
  background-color: #426c8a;
  transition: all 0.5s ease-in;
}

.short-other-color {
  background-color: #4c9196;
  transition: all 0.5s ease-in;
}

.long-other-color {
  background-color: #4d7fa2;
  transition: all 0.5s ease-in;
}

.dropdown-content2 i {
  background-color: white;
}

@media only screen and (max-width: 768px) {
  /* .navbar {
    display: flex;
    flex-direction: column;
    gap: 20px;
  } */

  .task-info {
    gap: 200px;
  }

  .clock-container {
    width: 350px;
    margin-top: 45px;
  }

  .add-task button {
    background-color: #aa4242;
    color: #e2bcbc;
    border: dashed 2px;
    border-radius: 10px;
    border-color: #af9595;
    margin-top: 25px;
    width: 350px;
    height: 50px;
    font-size: 18px;
    cursor: pointer;
  }
}

@media only screen and (max-width: 450px) {
  
  .navbar {
    display: flex;
    flex-direction: column;
    gap: 40px;
  }

  .setting-popup-content {
    width: 200px;
  }

  .task-info {
    gap: 200px;
  }

  .clock-container {
    width: 350px;
    margin-top: 45px;
  }

  .add-task button {
    background-color: #aa4242;
    color: #e2bcbc;
    border: dashed 2px;
    border-radius: 10px;
    border-color: #af9595;
    margin-top: 25px;
    width: 197px;
    height: 50px;
    font-size: 18px;
    cursor: pointer;
  }
  
  .add-task-popup {
    width: 350px;
  }
  
  .cancel {
    margin-left: 200px;
  }

  
}

